- API for frontend.   - Configuration from frontend.   - Removed configuration by commands.
